# pyplug

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  Skill.md  plan.md  pyproject.toml
core/: app.py
core/plugins/: base.py  decorators.py  loader.py  runner.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  PluginDetails.svelte
frontend/src/styles/: base.css  components.css
plugins/graph_plugin/: __init__.py  default.json
plugins/my_plugin/: __init__.py  default.json
scripts/: download_uv.py
tests/: test_api.py  test_plugin_rpc.py
