[project]
name = "pyplug"
version = "0.1.0"
description = "Pluggable core application with FastAPI, Svelte, and uv-isolated plugin subprocesses"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.0",
    "pydantic>=2.13.3",
    "python-multipart>=0.0.26",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
